--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Template-Electron-Apps",
+  "name": "Money",
   "version": "1.0.0",
-  "description": "Template for electron projects",
+  "description": "Do money for someone",
   "main": "index.js",
   "scripts": {
     "start": "electron .",
